feat: rotas de eventos e OpenAPI
